--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -30,6 +30,9 @@
         "showPreviousTabInGroup": "Переход на предыдущую вкладку в группе",
         "toggleMaximized": "Переключение максимизации"
       },
+      "copyInfo": "Сначала откройте файл, чтобы скопировать его путь",
+      "copyWarn": "Пожалуйста, используйте команду копирования или ярлык браузера.",
+      "cutWarn": "Используйте команду \"Вырезать\" или ярлык браузера.",
       "enhancedPreview": {
         "classic": "Отображение простого предварительного просмотра вкладки с основной информацией.",
         "enhanced": "Отображение расширенного предварительного просмотра вкладки с дополнительной информацией.",
@@ -54,6 +57,7 @@
         "clipboardWarnFirefox": "API буфера обмена недоступен. Его можно включить с помощью '{0}' привилегии на странице '{1}'. Затем перезагрузите Theia. Обратите внимание, это позволит FireFox получить полный доступ к системному буферу обмена."
       },
       "offline": "Offline",
+      "pasteWarn": "Пожалуйста, используйте команду \"Вставить\" или ярлык браузера.",
       "quitMessage": "Любые несохраненные изменения не будут сохранены.",
       "resetWorkbenchLayout": "Сброс макета верстака",
       "searchbox": {
@@ -69,14 +73,23 @@
     },
     "debug": {
       "addConfigurationPlaceholder": "Выберите корень рабочего пространства для добавления конфигурации",
+      "breakpoint": "точка останова",
       "compound-cycle": "Конфигурация запуска '{0}' содержит цикл с самим собой",
       "continueAll": "Продолжить все",
       "copyExpressionValue": "Копирование значения выражения",
+      "dataBreakpoint": "точка останова данных",
       "debugVariableInput": "Установите значение {0} ",
+      "entry": "вход",
+      "exception": "исключение",
+      "functionBreakpoint": "точка останова функции",
+      "goto": "перейти по ссылке",
       "instruction-breakpoint": "Точка останова инструкции",
+      "instructionBreakpoint": "точка останова инструкции",
       "missingConfiguration": "Динамическая конфигурация '{0}:{1}' отсутствует или неприменима",
+      "pause": "пауза",
       "pauseAll": "Приостановить все",
       "reveal": "Раскрыть",
+      "step": "шаг",
       "threads": "Нитки",
       "toggleTracing": "Включение/выключение трассировки связи с отладочными адаптерами"
     },
@@ -183,7 +196,18 @@
       "deprecation": "Вместо этого используйте предложение `when`."
     },
     "keymaps": {
+      "addKeybindingTitle": "Добавить привязку клавиш для {0}",
+      "editKeybinding": "Редактирование привязки клавиш...",
       "editKeybindingTitle": "Редактировать привязку клавиш для {0}",
+      "editWhenExpression": "Edit When Expression...",
+      "editWhenExpressionTitle": "Редактировать выражение When Expression for {0}",
+      "keybinding": {
+        "copy": "Копирование привязки клавиш",
+        "copyCommandId": "Копирование идентификатора команды привязки клавиш",
+        "copyCommandTitle": "Копирование привязки клавиш Название команды",
+        "edit": "Редактирование привязки клавиш...",
+        "editWhenExpression": "Редактирование привязки клавиш при выражении..."
+      },
       "keybindingCollidesValidation": "привязка клавиш в настоящее время сталкивается",
       "requiredKeybindingValidation": "требуется значение привязки клавиш",
       "resetKeybindingConfirmation": "Вы действительно хотите сбросить привязку к клавишам до значения по умолчанию?",
@@ -406,6 +430,11 @@
       "shellLinux": "Путь к оболочке, которую использует терминал в Linux (по умолчанию: '{0}'}).",
       "shellOsx": "Путь к оболочке, которую использует терминал на macOS (по умолчанию: '{0}'}).",
       "shellWindows": "Путь к оболочке, которую терминал использует в Windows. (по умолчанию: '{0}')."
+    },
+    "test": {
+      "cancelAllTestRuns": "Отмена всех тестовых запусков",
+      "testRunDefaultName": "{0} запустить {1}",
+      "testRuns": "Тестовые испытания"
     },
     "toolbar": {
       "addCommand": "Добавить команду на панель инструментов",
